ADD: 프로젝트 6일차 회고

--- a/2022.11.30(수).md
+++ b/2022.11.30(수).md
@@ -6,11 +6,11 @@
 
 08:30 - 10:30
 
-* Social Login 공부 : Kakao 공식 문서 참고
+- Social Login 공부 : Kakao 공식 문서 참고
 
 10:30 - 11:30
 
-* 오전 Session : Software Testing
+- 오전 Session : Software Testing
 
 <br/>
 
@@ -22,11 +22,11 @@
 
 12:30 - 19:30
 
-* Social Login 초기 세팅 : Kakao 공식 문서 참고
+- Social Login 초기 세팅 : Kakao 공식 문서 참고
 
 20:00 - 23:00
 
-* 팀 Back-end 개발자와 Social Login 관련 회의 및 파트 분배
+- 팀 Back-end 개발자와 Social Login 관련 회의 및 파트 분배
 
 <br/>
 
